force-app/main/default/objects/Oficial_X_Asesor__c/Oficial_X_Asesor__c.object-meta.xml
<CustomObject>
    <label>Oficial por Asesor</label>
    <nameField>
        <displayFormat>OS-{0000000}</displayFormat>
        <label>Corrrelativo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Oficiales por Asesores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>