force-app/main/default/objects/Oficial_X_Asesor__c/fields/Asesor__c.field-meta.xml
<CustomField>
    <fullName>Asesor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asesor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Oficiales_por_Asesores1</relationshipName>
    <type>Lookup</type>
</CustomField>