force-app/main/default/objects/Oficial_X_Asesor__c/fields/Codigo_Asesor__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Asesor__c</fullName>
    <label>Código Asesor</label>
    <length>20</length>
    <type>Text</type>
</CustomField>