force-app/main/default/objects/Oficial_X_Asesor__c/fields/Zona__c.field-meta.xml
<CustomField>
    <fullName>Zona__c</fullName>
    <label>Zona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CS</fullName>
                <label>Centro - Sur</label>
            </value>
            <value>
                <fullName>NO</fullName>
                <label>Nor - Occidental</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>