force-app/main/default/objects/Oficial_X_Asesor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Asesor__c</columns>
    <columns>Codigo_Asesor__c</columns>
    <columns>Codigo_Oficial_SAC__c</columns>
    <columns>Zona__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>